--- a/protocols/Modbus/Makefile-Bundle
+++ b/protocols/Modbus/Makefile-Bundle
@@ -3,22 +3,16 @@
 #
 # $Id$
 #
-# Makefile for macchina.io Modbus bundle
+# Makefile for macchina.io Modbus Core bundle
 #
+
+.PHONY: clean all
 
 BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
 
 include $(POCO_BASE)/build/rules/global
 
-INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
-INCLUDE += -I$(PROJECT_BASE)/devices/Serial/include
+all:
+	$(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -o../bundles Modbus.bndlspec
 
-objects = BundleActivator
-
-target         = io.macchina.modbus
-target_version = 1
-target_libs    = IoTModbus IoTDevices PocoSerial PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
-
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Modbus.bndlspec
-
-include $(POCO_BASE)/build/rules/dylib
+clean:
