Bluetooth LE support refactoring - make devices independent of actual Peripheral implementation

--- a/protocols/BtLE/BlueZ/Makefile
+++ b/protocols/BtLE/BlueZ/Makefile
@@ -10,12 +10,15 @@ BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
 
 include $(POCO_BASE)/build/rules/global
 
-objects = BundleActivator
+INCLUDE += -I$(PROJECT_BASE)/protocols/BtLE/include
 
-target         = io.macchina.btle
+objects = BundleActivator \
+	BlueZGATTClient
+
+target         = io.macchina.btle.bluez
 target_version = 1
 target_libs    = IoTBtLE PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
 
-postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles BtLE.bndlspec
+postbuild      = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles BlueZ.bndlspec
 
 include $(POCO_BASE)/build/rules/dylib
