--- a/protocols/Makefile
+++ b/protocols/Makefile
@@ -12,6 +12,7 @@ clean all:
 	$(MAKE) -C MQTT $(MAKECMDGOALS)
 	$(MAKE) -C XBee $(MAKECMDGOALS)
 	$(MAKE) -C BtLE $(MAKECMDGOALS)
+	$(MAKE) -C BtLE/BlueZ $(MAKECMDGOALS)
 	$(MAKE) -C UDP $(MAKECMDGOALS)
 	$(MAKE) -C Modbus $(MAKECMDGOALS)
 	$(MAKE) -C WebTunnel $(MAKECMDGOALS)
