--- a/protocols/Makefile
+++ b/protocols/Makefile
@@ -15,4 +15,5 @@ clean all:
 	$(MAKE) -C BtLE/BlueZ $(MAKECMDGOALS)
 	$(MAKE) -C UDP $(MAKECMDGOALS)
 	$(MAKE) -C Modbus $(MAKECMDGOALS)
+	$(MAKE) -C Modbus/RTU $(MAKECMDGOALS)
 	$(MAKE) -C WebTunnel $(MAKECMDGOALS)
