Refactoring: make Proxy a RemoteObject to allow proxy objects being used with skeletons in JSBridge. This requires that generated RemoteObject and EventDispatcher classes are also available on the client

--- a/platform/RemotingNG/RemoteGen/Makefile
+++ b/platform/RemotingNG/RemoteGen/Makefile
@@ -12,7 +12,7 @@ objects = AbstractGenerator ProxyFactoryGenerator SerializerGenerator XSDGenerat
 	ClientHelperGenerator ProxyGenerator ServerHelperGenerator \
 	BundleActivatorGenerator ExtensionsGenerator \
 	DeserializerGenerator RemoteGen SkeletonGenerator \
-	InterfaceGenerator RemoteObjectGenerator WSDLGenerator GenUtility \
+	InterfaceGenerator RemoteObjectGenerator StubGenerator WSDLGenerator GenUtility \
 	EventDispatcherGenerator EventSubscriberGenerator
 
 target         = RemoteGenNG
