--- a/platform/RemotingNG/TCP/testsuite/Makefile
+++ b/platform/RemotingNG/TCP/testsuite/Makefile
@@ -21,7 +21,8 @@ objects = \
 	TesterProxyFactory \
 	TesterRemoteObject \
 	TesterServerHelper \
-	TesterSkeleton
+	TesterSkeleton \
+	TesterStub
 
 target         = testrunner
 target_version = 1
